<resources>
    <string name="app_name">StudyKidsGame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tom Cruise</string>
    <string name="nav_header_subtitle">tom.cruise@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_pratice">Luyện tập</string>
    <string name="menu_competition">Thi đấu</string>
    <string name="menu_lesson">Bài giảng</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
