<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cuongle.studykidsgame.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pratice"
        android:name="com.cuongle.studykidsgame.ui.pratice.PraticeFragment"
        android:label="@string/menu_pratice"
        tools:layout="@layout/fragment_pratice" />

    <fragment
        android:id="@+id/nav_competition"
        android:name="com.cuongle.studykidsgame.ui.competition.CompetitionFragment"
        android:label="@string/menu_competition"
        tools:layout="@layout/fragment_competition" />

    <fragment
        android:id="@+id/nav_lesson"
        android:name="com.cuongle.studykidsgame.ui.lesson.LessonFragment"
        android:label="@string/menu_lesson"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cuongle.studykidsgame.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.cuongle.studykidsgame.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>